--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Growfax - Downloads</title>
-    <link rel="icon" href="Growfax_banner.jpg" type="image/jpeg">
+    <link rel="icon" href="Growfax_banner.png" type="image/png">
     <style>
         body {
             font-family: Arial, sans-serif;
