--- a/index.html
+++ b/index.html
@@ -3,149 +3,217 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Growfax - Downloads</title>
-    <link rel="icon" href="Growfax_banner.jpg" type="image/jpeg"> 
+    <title>Growfax Official Download Page</title>
+    
+<link rel="icon" href="Growfax_banner.jpg" type="image/jpeg"> 
     <style>
+        :root {
+            --primary-color: #007bff; /* Blue */
+            --secondary-color: #333;
+            --background-color: #f8f9fa; /* Light Gray */
+            --card-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+            --discord-color: #7289da;
+        }
+
         body {
-            font-family: Arial, sans-serif;
+            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
             margin: 0;
             padding: 0;
-            background-color: #f4f4f4;
-            color: #333;
+            background-color: var(--background-color);
+            color: var(--secondary-color);
+            line-height: 1.6;
         }
+
+        /* Header / Navigation Bar */
         .header {
-            background-color: #333;
-            color: #fff;
-            padding: 20px 0;
+            background-color: #fff;
+            padding: 15px 0;
             text-align: center;
-            border-bottom: 5px solid #ffaa00;
+            border-bottom: 3px solid var(--primary-color);
         }
-        .header img {
-            max-width: 100%; /* Agar gambar responsif */
+        .header-content {
+            max-width: 1200px;
+            margin: 0 auto;
+        }
+        .header-content h1 {
+            color: var(--secondary-color);
+            margin: 0;
+            font-size: 2.5em;
+        }
+
+        /* Banner Section */
+        .banner-section {
+            background-color: var(--secondary-color);
+            padding: 40px 0;
+            text-align: center;
+        }
+        .banner-section img {
+            max-width: 300px; /* MEMBATASI UKURAN BANNER */
             height: auto;
             border-radius: 8px;
-            margin-bottom: 10px;
-            box-shadow: 0 0 10px rgba(0,0,0,0.5); /* Menambahkan sedikit bayangan pada banner */
+            box-shadow: var(--card-shadow);
+            margin-bottom: 20px;
         }
+        .banner-section p {
+            color: #ccc;
+            font-size: 1.1em;
+            max-width: 600px;
+            margin: 0 auto;
+        }
+
+        /* Main Content Container */
         .container {
             width: 90%;
-            max-width: 1200px;
-            margin: 20px auto;
-            padding: 20px;
-            background-color: #fff;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-            border-radius: 8px;
+            max-width: 1100px;
+            margin: 30px auto;
         }
+
+        /* Download Cards Layout */
         .download-list {
             list-style: none;
             padding: 0;
             display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-            gap: 20px;
+            grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
+            gap: 25px;
+            margin-top: 20px;
         }
         .download-item {
             background-color: #fff;
-            border: 1px solid #ddd;
-            border-radius: 8px;
-            padding: 15px;
+            border-radius: 10px;
+            padding: 20px;
             text-align: center;
-            transition: transform 0.2s;
+            box-shadow: var(--card-shadow);
+            transition: transform 0.3s, box-shadow 0.3s;
         }
         .download-item:hover {
-            transform: translateY(-5px);
-            box-shadow: 0 5px 15px rgba(0, 0, 0, 0.1);
+            transform: translateY(-8px);
+            box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
         }
+
         .download-item img {
-            width: 80px;
-            height: 80px;
+            width: 70px;
+            height: 70px;
             object-fit: contain;
-            margin-bottom: 10px;
+            margin-bottom: 15px;
             border-radius: 5px;
+            border: 1px solid #eee;
         }
         .download-item h3 {
-            margin: 5px 0 10px 0;
-            font-size: 1.1em;
-            color: #555;
+            margin: 0 0 15px 0;
+            font-size: 1.2em;
+            color: var(--secondary-color);
         }
+
         .download-item a {
-            display: block;
-            background-color: #007bff;
+            display: inline-block;
+            background-color: var(--primary-color);
             color: #fff;
-            padding: 10px;
+            padding: 10px 20px;
             text-decoration: none;
-            border-radius: 5px;
+            border-radius: 25px; /* Tombol bulat */
             font-weight: bold;
             transition: background-color 0.2s;
         }
         .download-item a:hover {
             background-color: #0056b3;
         }
+
+        /* Discord Section */
         .discord-section {
             text-align: center;
-            margin-top: 30px;
-            padding: 20px;
-            background-color: #7289da;
+            margin-top: 50px;
+            padding: 30px;
+            background-color: var(--discord-color);
             color: #fff;
-            border-radius: 8px;
+            border-radius: 10px;
+            box-shadow: var(--card-shadow);
         }
         .discord-section img {
-            width: 60px;
-            height: 60px;
-            margin-bottom: 10px;
+            width: 50px;
+            height: 50px;
+            margin-bottom: 15px;
             border-radius: 50%;
+        }
+        .discord-section h2 {
+            margin-top: 0;
         }
         .discord-section a {
             color: #fff;
             font-weight: bold;
             text-decoration: underline;
             font-size: 1.1em;
+            display: block;
+            margin-top: 15px;
+        }
+
+        /* Footer */
+        .footer {
+            text-align: center;
+            padding: 20px;
+            margin-top: 40px;
+            color: #999;
+            font-size: 0.9em;
         }
     </style>
 </head>
 <body>
 
     <div class="header">
-        <img src="Growfax_banner.jpg" alt="Growfax Banner"> 
-        <h1>Growfax</h1>
-        <p>Download and Community Hub</p>
+        <div class="header-content">
+            <h1>Growfax Official</h1>
+        </div>
+    </div>
+
+    <div class="banner-section">
+        
+<img src="Growfax_banner.jpg" alt="Growfax Banner"> 
+        <p>Your hub for all Growtopia-related tools and files. Choose your platform below to get started.</p>
     </div>
 
     <div class="container">
-        <h2>📂 File Downloads</h2>
+        <h2>📥 Available Downloads</h2>
 
         <ul class="download-list">
             <li class="download-item">
                 <img src="windows.png" alt="Windows Logo">
-                <h3>Growfax Hosts Patcher (Windows)</h3>
+                <h3>Windows Hosts Patcher</h3>
+                <p>Easy patching for PC users.</p>
                 <a href="Growfax_Patched_.bat" download="Growfax_Patched_.bat">Download for Windows</a>
             </li>
 
             <li class="download-item">
                 <img src="virtual-host.png" alt="Virtual Host Logo">
-                <h3>Hosts File (Virtual Host Android)</h3>
+                <h3>Hosts File (Virtual Host)</h3>
+                <p>Hosts file for Virtual Host app.</p>
                 <a href="Growfax_VirtualHost.txt" download="Growfax_VirtualHost.txt">Download for Virtual Host</a>
             </li>
 
             <li class="download-item">
                 <img src="surge5.png" alt="Surge 5 Logo">
-                <h3>Hosts File (iOS/Surge 5)</h3>
+                <h3>Hosts File (iOS / Surge 5)</h3>
+                <p>Configuration for iOS users (Surge 5).</p>
                 <a href="GrowFax ios.txt" download="GrowFax ios.txt">Download for iOS/Surge 5</a>
             </li>
 
             <li class="download-item">
                 <img src="powertunnel.jpeg" alt="PowerTunnel Logo">
                 <h3>Hosts File (PowerTunnel)</h3>
+                <p>Hosts file for PowerTunnel utility.</p>
                 <a href="PowerTunel_Host.txt" download="PowerTunel_Host.txt">Download for PowerTunnel</a>
             </li>
         </ul>
 
         <div class="discord-section">
             <img src="discord.jpeg" alt="Discord Logo">
-            <h2>Join the Growfax Discord Community!</h2>
-            <p>Click the link below to join our Discord server:</p>
-            <a href="https://discord.gg/smgS6sq83y" target="_blank">Join Growfax Discord</a>
+            <h2>Join Our Community</h2>
+            <p>Connect with other members and get support on our official Discord server.</p>
+            <a href="https://discord.gg/smgS6sq83y" target="_blank">Join Growfax Discord Now!</a>
         </div>
 
+    </div>
+
+    <div class="footer">
+        &copy; 2025 Growfax. All rights reserved.
     </div>
 
 </body>
