--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             text-align: center;
         }
         .banner-section img {
-            max-width: 300px; /* MEMBATASI UKURAN BANNER */
+            max-width: 300px; /* Maximum banner width */
             height: auto;
             border-radius: 8px;
             box-shadow: var(--card-shadow);
@@ -110,7 +110,7 @@
             color: #fff;
             padding: 10px 20px;
             text-decoration: none;
-            border-radius: 25px; /* Tombol bulat */
+            border-radius: 25px; /* Pill button */
             font-weight: bold;
             transition: background-color 0.2s;
         }
@@ -177,22 +177,22 @@
             <li class="download-item">
                 <img src="windows.png" alt="Windows Logo">
                 <h3>Windows Hosts Patcher</h3>
-                <p>Easy patching for PC users.</p>
+                <p>Easy hosts patching tool for PC users.</p>
                 <a href="Growfax_Patched_.bat" download="Growfax_Patched_.bat">Download for Windows</a>
             </li>
 
             <li class="download-item">
                 <img src="virtual-host.png" alt="Virtual Host Logo">
                 <h3>Hosts File (Virtual Host)</h3>
-                <p>Hosts file for Virtual Host app.</p>
+                <p>Hosts file for Android Virtual Host app.</p>
                 <a href="Growfax_VirtualHost.txt" download="Growfax_VirtualHost.txt">Download for Virtual Host</a>
             </li>
 
             <li class="download-item">
                 <img src="surge5.png" alt="Surge 5 Logo">
-                <h3>Hosts File (iOS / Surge 5)</h3>
-                <p>Configuration for iOS users (Surge 5).</p>
-                <a href="GrowFax ios.txt" download="GrowFax ios.txt">Download for iOS/Surge 5</a>
+                <h3>Surge 5 Rule Configuration</h3>
+                <p>Rule configuration file for iOS apps like Surge 5.</p>
+                <a href="GrowFax ios.txt" download="GrowFax_iOS_Surge.txt">Download for Surge/iOS</a>
             </li>
 
             <li class="download-item">
