--- a/automatic.html
+++ b/automatic.html
@@ -95,7 +95,7 @@
     </li>
   </ul>
 
-  <script src="https://www.paypal.com/sdk/js?client-id=AR9ufJannnC6jO5hsa7FWE0-Zd6S9ccJPzZX4JBg8EOGBKA_-KZn1in_xtjiofrlDZYe7V-ybMDgsxpe&currency=USD"></script>
+  <script src="AaTxqCEZ-oinQ1yg7ip-tAWY0PDrnp5aZbUme2eH-6eZMSy9MCmUCrKRvTTrMPCeJe2yzzlVFKJkZQyT&currency=USD"></script>
   <script>
     const webhookUrl = "https://hooks.zapier.com/hooks/catch/25202128/uipft59/";
 
