--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Growfax Official - Store & Downloads</title>
+    <title>Growfax Official & Downloads</title>
     
 <link rel="icon" href="Growfax_banner.jpg" type="image/jpeg"> 
     <style>
@@ -286,9 +286,8 @@
     <div class="container" id="shop">
         <h2>✨ Official Growfax Role Shop</h2>
         <p style="text-align: center; color: red; font-weight: bold;">
-            ⚠️ All payments are in USD. Payments will be directed to the business account: **Growfax**.
+            ⚠️ All payments are in USD. Payments will be direct to paypal: **Growfax**.
             Please click the button below; payment will be directed to <a href="https://paypal.me/Growfax" target="_blank" style="color: red; text-decoration: underline;">PayPal.Me/Growfax</a>. 
-            **AUTOMATIC:** Your transaction log will be sent to Discord instantly via the Zapier system.
         </p>
 
         <ul class="role-list">
@@ -296,9 +295,8 @@
                 <h3>VIP</h3>
                 <p class="price"><span>USD</span>0.903</p>
                 <ul>
-                    <li>✅ Basic Support Access</li>
-                    <li>✅ Queue Priority</li>
-                    <li>❌ Exclusive Tools Access</li>
+                    <li>✅ Basic Command For Vip</li>
+                    <li>❌ Command Vip+ Access</li>
                 </ul>
                 <a href="https://paypal.me/Growfax/0.903USD" target="_blank" class="paypal-button">Pay with PayPal</a>
             </li>
@@ -308,8 +306,8 @@
                 <p class="price"><span>USD</span>1.504</p>
                 <ul>
                     <li>✅ All VIP Benefits</li>
-                    <li>✅ Custom Role Color</li>
-                    <li>❌ Exclusive Tools Access</li>
+                    <li>✅ Vip+ Command</li>
+                    <li>❌ Moderator Command Access</li>
                 </ul>
                 <a href="https://paypal.me/Growfax/1.504USD" target="_blank" class="paypal-button">Pay with PayPal</a>
             </li>
@@ -319,8 +317,9 @@
                 <p class="price"><span>USD</span>3.309</p>
                 <ul>
                     <li>✅ All VIP+ Benefits</li>
-                    <li>✅ Staff Channel Access</li>
-                    <li>✅ Limited Moderation Commands</li>
+                    <li>✅ Moderator Command Access</li>
+                    <li>✅ Moderator Tool Like Banned, Mute, Curse</li>
+                    <li>❌ Super Moderator Command</li>
                 </ul>
                 <a href="https://paypal.me/Growfax/3.309USD" target="_blank" class="paypal-button">Pay with PayPal</a>
             </li>
@@ -330,8 +329,9 @@
                 <p class="price"><span>USD</span>4.212</p>
                 <ul>
                     <li>✅ All Moderator Benefits</li>
-                    <li>✅ Full Moderation Commands Access</li>
-                    <li>✅ Dedicated Support Line</li>
+                    <li>✅ Super Moderator Command</li>
+                    <li>✅ All Command Action</li>
+                    <li>❌ Developer Command</li>
                 </ul>
                 <a href="https://paypal.me/Growfax/4.212USD" target="_blank" class="paypal-button">Pay with PayPal</a>
             </li>
@@ -341,8 +341,8 @@
                 <p class="price"><span>USD</span>5.415</p>
                 <ul>
                     <li>✅ All Super Moderator Benefits</li>
-                    <li>✅ Code Repository Access</li>
-                    <li>✅ Alpha Feature Testing</li>
+                    <li>✅ Developer Command</li>
+                    <li>❌ God Command Access</li>
                 </ul>
                 <a href="https://paypal.me/Growfax/5.415USD" target="_blank" class="paypal-button">Pay with PayPal</a>
             </li>
@@ -352,8 +352,8 @@
                 <p class="price"><span>USD</span>9.025</p>
                 <ul>
                     <li>✅ All Developer Benefits</li>
-                    <li>🔥 Direct Admin Contact</li>
-                    <li>🔥 High Priority Feature Requests</li>
+                    <li>🔥 God Command Access</li>
+                    <li>🔥 Got everything Free Block Find (Limited under 100 Rarity - No Farmable)!</li>
                 </ul>
                 <a href="https://paypal.me/Growfax/9.025USD" target="_blank" class="paypal-button">Pay with PayPal</a>
             </li>
@@ -363,8 +363,8 @@
                 <p class="price"><span>USD</span>15.042</p>
                 <ul>
                     <li>✅ All God Benefits</li>
-                    <li>👑 Lifetime Subscription</li>
-                    <li>👑 Exclusive 'Founder' Badge</li>
+                    <li>👑 God Max Command Access</li>
+                    <li>👑 All Find Item Rarity (Cannot Find Lock)!</li>
                 </ul>
                 <a href="https://paypal.me/Growfax/15.042USD" target="_blank" class="paypal-button">Pay with PayPal</a>
             </li>
